# CSU44052

./: CMakeLists.txt  README.md  idea.txt
final-proj/: buildings.cpp  camera.cpp  temp.cpp  terrain.cpp
final-proj/models/: low_buildingA.gltf  low_buildingD.gltf  low_buildingE.gltf  low_buildingF.gltf  low_buildingJ.gltf  low_buildingN.gltf  skyscraperA.gltf  skyscraperB.gltf  skyscraperC.gltf  skyscraperD.gltf  skyscraperE.gltf  skyscraperF.gltf
final-proj/render/: perlin.frag  perlin.vert
final-proj/shader/: assets.frag  assets.vert  terrain.frag  terrain.vert
lab2/: box.vert  lab2_building.cpp  lab2_skybox.cpp  lab2_skybox.h  sbox.frag
lab3/: box.frag  box.vert  lab3_cornellbox.cpp  shadow.frag  shadow.vert
lab4/: camera.cpp  lab4_character.cpp  lab4_skeleton.cpp
lab4/shader/: bot.frag  bot.vert
